[gd_scene load_steps=23 format=3 uid="uid://clmcmx6titcm3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_75l53"]
[ext_resource type="Texture2D" uid="uid://rtj1ibv05cdf" path="res://assets/sprites/player/player_sprite_test.png" id="2_wo0oc"]
[ext_resource type="PackedScene" uid="uid://bd2q7v0rrkdor" path="res://scenes/player/player_hit_box.tscn" id="3_wmy7a"]

[sub_resource type="Curve" id="Curve_e8fbc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_604p7"]
curve = SubResource("Curve_e8fbc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v35jt"]
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 3.0
scale_curve = SubResource("CurveTexture_604p7")

[sub_resource type="CircleShape2D" id="CircleShape2D_u21qi"]
radius = 1.0

[sub_resource type="Animation" id="Animation_32605"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:SPEED")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..:is_dead")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../PlayerHitBox:IMMUNITY")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3jrpp"]
resource_name = "player_dash"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:SPEED")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [200, 200, 100, 50]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../DashCooldown")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PlayerHitBox:IMMUNITY")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_qvctg"]
resource_name = "player_fall"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 12.5664, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.95),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"respawn"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:is_dead")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.95),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_77qii"]
resource_name = "walk"
length = 0.3
loop_mode = 2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6671s"]
_data = {
"RESET": SubResource("Animation_32605"),
"player_dash": SubResource("Animation_3jrpp"),
"player_fall": SubResource("Animation_qvctg"),
"player_walk": SubResource("Animation_77qii")
}

[sub_resource type="Animation" id="Animation_khmkx"]
resource_name = "cast_air_spell"
length = 0.86
step = 0.02
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [Vector2(3, 0)],
"method": &"cast_spell"
}, {
"args": [Vector2(0, 3)],
"method": &"cast_spell"
}, {
"args": [Vector2(0, -3)],
"method": &"cast_spell"
}]
}

[sub_resource type="Animation" id="Animation_c1w65"]
resource_name = "cast_earth_spell"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(5, 0)],
"method": &"cast_spell"
}]
}

[sub_resource type="Animation" id="Animation_nkiqc"]
resource_name = "cast_fire_spell"
length = 0.8
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(0, 0)],
"method": &"cast_spell"
}]
}

[sub_resource type="Animation" id="Animation_ypxbm"]
resource_name = "cast_water_spell"
length = 1.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(0, 0)],
"method": &"cast_spell"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svi16"]
_data = {
"cast_air_spell": SubResource("Animation_khmkx"),
"cast_earth_spell": SubResource("Animation_c1w65"),
"cast_fire_spell": SubResource("Animation_nkiqc"),
"cast_water_spell": SubResource("Animation_ypxbm")
}

[sub_resource type="Animation" id="Animation_0h2rs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_35xqm"]
resource_name = "player_death"
length = 1.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"respawn"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerSprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.133333, 0.12549, 0.203922, 1)]
}

[sub_resource type="Animation" id="Animation_6kwo0"]
resource_name = "player_hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.261799, 0.261799, -0.0872665, 0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.133333, 0.12549, 0.203922, 1), Color(1, 1, 1, 1), Color(0.133333, 0.12549, 0.203922, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"is_player_dead"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cmalq"]
_data = {
"RESET": SubResource("Animation_0h2rs"),
"player_death": SubResource("Animation_35xqm"),
"player_hurt": SubResource("Animation_6kwo0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7axn"]
size = Vector2(4, 7)

[node name="Player" type="CharacterBody2D"]
z_index = 2
y_sort_enabled = true
collision_layer = 16
motion_mode = 1
script = ExtResource("1_75l53")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_wo0oc")
hframes = 8

[node name="HandMarker" type="Marker2D" parent="PlayerSprite"]
position = Vector2(5, -1)

[node name="GPUParticles2D" type="GPUParticles2D" parent="PlayerSprite"]
show_behind_parent = true
position = Vector2(0, 1)
emitting = false
amount = 64
process_material = SubResource("ParticleProcessMaterial_v35jt")

[node name="MovementCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u21qi")

[node name="PlayerMovementAnimations" type="AnimationPlayer" parent="."]
root_node = NodePath("../PlayerSprite")
libraries = {
"": SubResource("AnimationLibrary_6671s")
}

[node name="PlayerSpellAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_svi16")
}

[node name="PlayerDamageAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cmalq")
}

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerHitBox" parent="." instance=ExtResource("3_wmy7a")]
position = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_p7axn")
debug_color = Color(0, 0.63754, 0.390731, 0.42)

[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
